--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
   ],
   "routes": [
     {
-      "src": "/api/predict",
-      "dest": "api/predict.py"
+      "src": "/api/index",
+      "dest": "api/index.py"
     }
   ]
 }
