--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,11 @@
   ],
   "routes": [
     {
-      "src": "/api/index",
+      "src": "/api/predict",
+      "dest": "api/index.py"
+    },
+    {
+      "src": "/",
       "dest": "api/index.py"
     }
   ]
