--- a/vercel.json
+++ b/vercel.json
@@ -8,11 +8,11 @@
   ],
   "routes": [
     {
-      "src": "/api/predict",
+      "src": "/api/.*",
       "dest": "api/index.py"
     },
     {
-      "src": "/",
+      "src": "/.*",
       "dest": "api/index.py"
     }
   ]
